--- a/app/app.global.css
+++ b/app/app.global.css
@@ -2,6 +2,9 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
+@import '~bootstrap/dist/css/bootstrap.css';
+
+
 /* @import '~@fortawesome/fontawesome-free/css/all.css'; */
 /* 
 body {
